prevent wrapping of Link field

--- a/cmsplugin_cascade/static/cascade/css/admin/editplugin.css
+++ b/cmsplugin_cascade/static/cascade/css/admin/editplugin.css
@@ -36,4 +36,4 @@ form label[for=id_cms_page], form label[for=id_section] { width: 0; }
 #id_condition, #id_link_content { width: calc(100% - 20px); }
 
 form .form-row .select2-selection { height: 36px; }
-form .form-row .django-select2 { width: calc(100% - 40px) !important; }
+form .form-row .django-select2 { width: calc(100% - 200px) !important; }
